# CXX-Algorithms

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  algorithms.hpp
tests/: CMakeLists.txt  test_all_of.cpp  test_any_of.cpp  test_for_each.cpp  test_for_each_n.cpp  test_none_of.cpp  test_search.cpp  test_template.cpp
